# wombat

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  wombat.spec
.github/workflows/: release.yml
assets/: Wombat Logo Concepts.html  Wombat Logo.html  _lockup_export.html  make-icons.sh  wombat.icns
docs/: additional-ideas.md  beat-detection.md  phase-0-scaffold.md  phase-1-video.md  phase-2-domain-core.md  phase-3-timeline.md  phase-4-editing.md  phase-5-project.md  phase-6-layers.md  phase-7-snippets.md  phase-8-events-pipeline.md  phase-9-plugin-api.md  phase-9-polish.md
docs/user/: README.md  audio-and-beats.md  channels-and-layers.md  events.md  (+6 more)
memory/: MEMORY.md  wombat-roadmap-state.md
packaging/: pyi_rth_libmpv.py
tests/: conftest.py  test_action.py  test_beat_loader.py  test_beats.py  test_channel.py  test_channels_panel.py  test_editor.py  test_editor_beats.py  test_events.py  test_example_motion_assist.py  test_funscript_io.py  test_heatmap_export.py  test_interpolate.py  test_keybindings.py  test_merge_layer.py  test_naming.py  test_player.py  test_plugin_log_panel.py  test_plugin_tasks.py  test_plugin_ui.py  test_plugins.py  test_plugins_controller.py  test_preferences_beat.py  test_project.py  test_smoke.py  test_snippet_detected_beats.py  test_snippet_panel.py  test_snippets.py  test_synthesis.py  test_time_spinbox.py  test_timeline_beats.py  test_timeline_zoom.py  test_transforms.py  test_undo.py  test_viewport.py  test_waveform_loader.py
wombat/: __main__.py  keybindings.py  logging_config.py  mpv_loader.py  settings.py
(+74 files in other folders)
