[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wombat"
version = "0.1.0"
description = "Cross-platform funscript authoring and editing tool"
requires-python = ">=3.11"
dependencies = [
    "PySide6",
    "python-mpv",
    "numpy",
]

[project.scripts]
wombat = "wombat.__main__:main"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["OFS", "funscript-tools", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
